# python-reliability-toolkit

./: .gitignore  CI_SCHEDULED_WORKFLOW.md  CONTRIBUTING.md  DASHBOARD_OPERATIONS.md  Makefile  README.md  S3_ARCHITECTURE_PLAN.md  SEED_STRATEGY.md  pyproject.toml  reliabilitykit.yaml
.github/workflows/: ci-scheduled.yml  ci.yml
docs/: README.md  aws-phase-d-lambda.md  ci-scheduled-workflow.md  contributing.md  dashboard-operations.md  s3-architecture-plan.md  s3-lifecycle-policy.json  seed-strategy.md
docs/architecture/: api_reliability_audit_mvp_architecture.md
docs/archive/: CI_SCHEDULED_WORKFLOW.md  DASHBOARD_OPERATIONS.md  S3_ARCHITECTURE_PLAN.md  SEED_STRATEGY.md
docs/product/: api_reliability_audit_mvp_spec.md
docs/qa/: api_reliability_audit_mvp_test_plan.md
docs/release/: api_reliability_audit_planning_issue.md  api_reliability_audit_planning_pr.md
docs/strategies/: api_reliability_audit_mvp_marketing_strategy.md  api_reliability_audit_mvp_pricing_model.md
docs/uiux/: api_reliability_audit_mvp_design_spec.md
reliabilitykit/: __init__.py
reliabilitykit/chaos/: injector.py  matcher.py  profiles.py
reliabilitykit/cli/: main.py
reliabilitykit/cli/commands/: chaos.py  dashboard.py  inspect.py  report.py  run.py  trend.py
reliabilitykit/core/: classifier.py  config.py  contracts.py  env.py  failure_digest.py  models.py  runner.py  scan_packs.py  scenario_registry.py
reliabilitykit/plugins/: pytest_plugin.py
reliabilitykit/reporting/: html_dashboard.py  html_run.py  html_trend.py  insights.py  json_writer.py  metrics.py
reliabilitykit/storage/: base.py  local.py  s3.py
tests/api_scenarios/: conftest.py
tests/api_scenarios/data/: targets.py
tests/api_scenarios/helpers/: api_client.py  models.py
tests/api_scenarios/tests/: test_core_reliability_pack.py
tests/e2e/: conftest.py  test_saucedemo_reliability.py
tests/e2e/assertions/: form_assertions.py  navigation_assertions.py
tests/e2e/components/: header_component.py  language_component.py  notification_component.py
tests/golden/: dashboard_report.html  run_record.json  run_report.html  trend_report.html
tests/unit/: test_chaos_engine.py  test_classifier.py  test_cli_commands.py  test_config.py  test_e2e_architecture_guardrails.py  test_env.py  test_failure_digest.py  test_matcher.py  test_pytest_plugin.py  test_reporting_golden.py  test_reporting_metrics.py  test_storage_local.py
(+19 files in other folders)
