[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliabilitykit"
version = "0.1.0"
description = "Local-first reliability execution toolkit for pytest + Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "playwright>=1.52",
  "typer>=0.12",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
]

[project.scripts]
reliabilitykit = "reliabilitykit.cli.main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["reliabilitykit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "chaos: tests that run with chaos profile",
]
