[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliabilitykit"
version = "0.1.0"
description = "Local-first reliability execution toolkit for pytest + Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "pytest-asyncio>=0.23",
  "playwright==1.52.0",
  "typer>=0.12",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
]

[project.scripts]
reliabilitykit = "reliabilitykit.cli.main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["reliabilitykit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "legacy_ui: deprecated but supported UI end-to-end scenarios",
  "api_scenario: API reliability scenario-pack tests",
  "scenario_baseline_health: baseline health API scenario",
  "scenario_repeated_stability: repeated stability API scenario",
  "scenario_burst_stability: burst stability API scenario",
  "scenario_invalid_payload_handling: invalid payload API scenario",
  "scenario_missing_fields_validation: missing fields API scenario",
  "scenario_auth_failure_handling: auth failure API scenario",
  "scenario_timeout_sensitivity: timeout sensitivity API scenario",
  "scenario_response_consistency: response consistency API scenario",
  "chaos: tests that run with chaos profile",
  "smoke: fast route and UI smoke checks",
  "positive: expected success behavior checks",
  "negative: expected failure and validation checks",
  "edge: edge-case behavior checks",
]
